small balancer update

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "'+/+ ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; VT40556-Gal4, fru-FLP/VT40556-Gal4, fru-FLP'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -98,21 +98,21 @@
        "      <th>0</th>\n",
        "      <td>B#67686</td>\n",
        "      <td>UAS &gt; stop &gt; Kir2.1 on chr2</td>\n",
-       "      <td>w[*]; UAS&lt;stop&gt;Kir2.1/CyO ;</td>\n",
+       "      <td>w[*]/w[*] ; UAS&lt;stop&gt;Kir2.1/CyO ; +/+</td>\n",
        "      <td>[[w[*], w[*]], [UAS&lt;stop&gt;Kir2.1, CyO], [+, +]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>S#272</td>\n",
        "      <td>Chrimson pIP10 from Philipsborn 2011, VT40556-...</td>\n",
-       "      <td>;UAS&lt;stop&gt;Chrimson,mVenus/CyO; VT40556-Gal4, f...</td>\n",
+       "      <td>+/+ ; UAS&lt;stop&gt;Chrimson,mVenus/CyO ; VT40556-G...</td>\n",
        "      <td>[[+, +], [UAS&lt;stop&gt;Chrimson,mVenus, CyO], [VT4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>balancers</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>; s/CyO ; Tm2/Tm6b</td>\n",
+       "      <td>+/+ ; s/CyO ; Tm2/Tm6b</td>\n",
        "      <td>[[+, +], [s, CyO], [Tm2, Tm6b]]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -126,9 +126,9 @@
        "2  balancers                                                NaN   \n",
        "\n",
        "                                            genotype  \\\n",
-       "0                        w[*]; UAS<stop>Kir2.1/CyO ;   \n",
-       "1  ;UAS<stop>Chrimson,mVenus/CyO; VT40556-Gal4, f...   \n",
-       "2                                 ; s/CyO ; Tm2/Tm6b   \n",
+       "0              w[*]/w[*] ; UAS<stop>Kir2.1/CyO ; +/+   \n",
+       "1  +/+ ; UAS<stop>Chrimson,mVenus/CyO ; VT40556-G...   \n",
+       "2                             +/+ ; s/CyO ; Tm2/Tm6b   \n",
        "\n",
        "                                      split_genotype  \n",
        "0     [[w[*], w[*]], [UAS<stop>Kir2.1, CyO], [+, +]]  \n",
@@ -136,7 +136,7 @@
        "2                    [[+, +], [s, CyO], [Tm2, Tm6b]]  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,60 +144,161 @@
    "source": [
     "fly_stock_table = pd.read_excel('simple_crosses_table.xlsx')\n",
     "balancers_table = pd.read_excel('balancers_table.xlsx')\n",
+    "for gen in fly_stock_table.genotype:\n",
+    "    fly_stock_table.loc[fly_stock_table.genotype == gen,'genotype'] = fix_genotype_notation(gen)\n",
     "fly_stock_table['split_genotype'] = [split_into_chromosomes(genotype) for genotype in fly_stock_table.genotype]\n",
     "fly_stock_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>description</th>\n",
+       "      <th>chromosome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tm2</td>\n",
+       "      <td>hair on haltere</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tm6b</td>\n",
+       "      <td>extra hairs on shoulder</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CyO</td>\n",
+       "      <td>curly wings</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s</td>\n",
+       "      <td>star-eyes</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{(';', ';')}, {(' ', ' ')}, {('s', 's')}]"
+       "  label              description  chromosome\n",
+       "0   Tm2          hair on haltere           3\n",
+       "1  Tm6b  extra hairs on shoulder           3\n",
+       "2   CyO              curly wings           2\n",
+       "3     s                star-eyes           2"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[set([x for x in itertools.product(fly1[ichr],fly2[ichr])]) for ichr in range(3)]\n",
-    "\n",
-    "for ichr in range(3):\n",
-    "    set([x for x in itertools.product(fly1[ichr],fly2[ichr])])"
+    "balancers_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "; s/CyO ; Tm2/Tm6b\n",
-      "[{(';', ';')}, {(' ', ' ')}, {('s', 's')}]\n"
+      "w[*]/w[*] ; UAS<stop>Kir2.1/CyO ; +/+\n",
+      "+/+ ; s/CyO ; Tm2/Tm6b\n",
+      "found balancers:  ['Tm6b', 'CyO', 's', 'Tm2']\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# for fly1, fly2 in itertools.product(fly_stock_table.genotype,fly_stock_table.genotype):\n",
+    "\n",
+    "fly1 = fly_stock_table.genotype[0]\n",
+    "fly2 = fly_stock_table.genotype[2]\n",
+    "\n",
+    "print(fly1)\n",
+    "print(fly2)\n",
+    "\n",
+    "progeny_genotypes = get_progeny(fly1=split_into_chromosomes(fly1),fly2=split_into_chromosomes(fly2),balancers_table=balancers_table)\n",
+    "\n",
+    "fly1_chromosomes = split_into_chromosomes(fly1)\n",
+    "fly2_chromosomes = split_into_chromosomes(fly2)\n",
+    "\n",
+    "found_balancers = [z for z in set([x for chromosomes in [fly1_chromosomes,fly2_chromosomes] for chr in chromosomes for x in chr]) if z in balancers_table.label.tolist()]\n",
+    "\n",
+    "print('found balancers: ',found_balancers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{'+', 'CyO', 'UAS<stop>Kir2.1', 'w[*]'}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(fly_stock_table.genotype[2])\n",
-    "get_progeny(fly1=fly_stock_table.genotype[2],fly2=fly_stock_table.genotype[2],balancers_table=balancers_table)"
+    "set([x for chr in fly1_chromosomes for x in chr])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Tm2', 'Tm6b', 'CyO', 's']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balancers_table.label.tolist()"
    ]
   },
   {
@@ -239,17 +340,21 @@
    "source": [
     "for fly1, fly2 in itertools.product(fly_stock_table.genotype,fly_stock_table.genotype):\n",
     "    progeny_genotypes = get_progeny(fly1=split_into_chromosomes(fly1),fly2=split_into_chromosomes(fly2),balancers_table=balancers_table)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
     "    if goal_genotype not in progeny_genotypes:\n",
     "        second_step_stock = [fly1, fly2] + progeny_genotypes\n",
-    "        for fly3, fly4 in itertools.product(second_step_stock,second_step_stock):\n",
-    "            second_progeny_genotypes = get_progeny(fly1=split_into_chromosomes(fly3),fly2=split_into_chromosomes(fly4),balancers_table=balancers_table)\n",
-    "            if goal_genotype in second_progeny_genotypes:\n",
-    "                print('viable cross plan')\n",
-    "                print(fly1,' x ', fly2)\n",
-    "                print(fly3,' x ', fly4)\n",
-    "    else:\n",
-    "        print('viable cross plan')\n",
-    "        print(fly1,' x ', fly2)\n"
+    "        # for fly3, fly4 in itertools.product(second_step_stock,second_step_stock):\n",
+    "        #     second_progeny_genotypes = get_progeny(fly1=split_into_chromosomes(fly3),fly2=split_into_chromosomes(fly4),balancers_table=balancers_table)\n",
+    "    #         if goal_genotype in second_progeny_genotypes:\n",
+    "    #             print('viable cross plan')\n",
+    "    #             print(fly1,' x ', fly2)\n",
+    "    #             print(fly3,' x ', fly4)\n",
+    "    # else:\n",
+    "    #     print('viable cross plan')\n",
+    "    #     print(fly1,' x ', fly2)\n"
    ]
   },
   {
@@ -339,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
