cleaned one step crossing

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,6 @@
     "\n",
     "    progeny_chromosome_pool = get_unique_progeny_chromosome_pool(fly1, fly2)\n",
     "    progeny_chromosome_pool = clean_lethals_from_pool(progeny_chromosome_pool, balancers_table)\n",
-    "\n",
-    "    # get all possible products of cross, ignore duplicates (but not considering change of order)\n",
-    "    # possible_chromosomes = [set([sorted(x) for x in itertools.product(fly1[ichr],fly2[ichr])]) for ichr in range(3)]\n",
-    "    # print(possible_chromosomes)\n",
-    "    # possible_chromosomes = [[alleles for alleles in chromosome_list if not ((alleles[0]==alleles[1]) and (alleles[0] in balancers_table.label.tolist()))] for chromosome_list in possible_chromosomes]\n",
-    "    # print(possible_chromosomes)\n",
     "    possible_progeny = [z for z in itertools.product(*progeny_chromosome_pool)]\n",
     "    progeny_genotypes = [chromosomes_to_string(chromosome_list) for chromosome_list in possible_progeny]\n",
     "    return progeny_genotypes"
@@ -72,30 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'+/+ ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; VT40556-Gal4, fru-FLP/VT40556-Gal4, fru-FLP'"
+       "'+/+ ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; +/+'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# set goal genotype, and fix notation\n",
-    "goal_genotype = '+/+ ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; VT40556-Gal4, fru-FLP/VT40556-Gal4, fru-FLP'\n",
+    "# goal_genotype = '+/+ ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; VT40556-Gal4, fru-FLP/VT40556-Gal4, fru-FLP'\n",
+    "goal_genotype = '; UAS<stop>Kir2.1 ; '\n",
     "goal_genotype = fix_genotype_notation(goal_genotype)\n",
     "goal_genotype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +163,7 @@
        "2                    [[+, +], [s, CyO], [Tm2, Tm6b]]  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,33 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['w[*]', 'w[*]']], [['CyO', 'UAS<stop>Kir2.1'], ['UAS<stop>Kir2.1', 'UAS<stop>Kir2.1']], [['+', '+']]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "fly1 = fly_stock_table.genotype[0]\n",
-    "fly2 = fly_stock_table.genotype[0]\n",
-    "fly1=str_to_chromosomes(fly1)\n",
-    "fly2=str_to_chromosomes(fly2)\n",
-    "        \n",
-    "progeny_chromosome_pool = get_unique_progeny_chromosome_pool(fly1, fly2)\n",
-    "progeny_chromosome_pool = clean_lethals_from_pool(progeny_chromosome_pool, balancers_table)\n",
-    "\n",
-    "print(progeny_chromosome_pool)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +192,9 @@
       "fly 2:\n",
       " w[*]/w[*] ; UAS<stop>Kir2.1/CyO ; +/+\n",
       "progeny:\n",
-      "['w[*]/w[*] ; CyO/UAS<stop>Kir2.1 ; +/+', 'w[*]/w[*] ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; +/+']\n"
+      "['w[*]/w[*] ; UAS<stop>Kir2.1/UAS<stop>Kir2.1 ; +/+', 'w[*]/w[*] ; CyO/UAS<stop>Kir2.1 ; +/+']\n",
+      "found balancers:\n",
+      " ['CyO']\n"
      ]
     }
    ],
@@ -249,185 +220,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{('w[*]',)},\n",
-       " {('CyO',), ('UAS<stop>Kir2.1',), ('UAS<stop>Kir2.1', 'CyO')},\n",
-       " {('+',)}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fly1 = str_to_chromosomes(fly_stock_table.genotype[0])\n",
-    "fly2 = str_to_chromosomes(fly_stock_table.genotype[0])\n",
-    "[set([tuple(set(x)) for x in itertools.product(fly1[ichr],fly2[ichr])]) for ichr in range(3)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{('CyO',), ('UAS<stop>Kir2.1',), ('UAS<stop>Kir2.1', 'CyO')}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ichr = 1\n",
-    "set([tuple([y for y in set(x)]) for x in itertools.product(fly1[ichr],fly2[ichr])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{('w[*]',)}, {('CyO',), ('UAS<stop>Kir2.1', 'CyO'), ('UAS<stop>Kir2.1',)}, {('+',)}]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'set' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [\u001b[39mset\u001b[39m([\u001b[39mtuple\u001b[39m(\u001b[39mset\u001b[39m(x)) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m itertools\u001b[39m.\u001b[39mproduct(fly1[ichr],fly2[ichr])]) \u001b[39mfor\u001b[39;00m ichr \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m3\u001b[39m)]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(possible_chromosomes)\n\u001b[1;32m----> 3\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [(chromosome[\u001b[39m0\u001b[39m],chromosome[\u001b[39m0\u001b[39m]) \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(chromosome)\u001b[39m==\u001b[39m\u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mtuple\u001b[39m(chromosome) \u001b[39mfor\u001b[39;00m chromosome \u001b[39min\u001b[39;00m possible_chromosomes]\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(possible_chromosomes)\n\u001b[0;32m      5\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [[alleles \u001b[39mfor\u001b[39;00m alleles \u001b[39min\u001b[39;00m chromosome_list \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m ((alleles[\u001b[39m0\u001b[39m]\u001b[39m==\u001b[39malleles[\u001b[39m1\u001b[39m]) \u001b[39mand\u001b[39;00m (alleles[\u001b[39m0\u001b[39m] \u001b[39min\u001b[39;00m balancers_table\u001b[39m.\u001b[39mlabel\u001b[39m.\u001b[39mtolist()))] \u001b[39mfor\u001b[39;00m chromosome_list \u001b[39min\u001b[39;00m possible_chromosomes]\n",
-      "Cell \u001b[1;32mIn [8], line 3\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [\u001b[39mset\u001b[39m([\u001b[39mtuple\u001b[39m(\u001b[39mset\u001b[39m(x)) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m itertools\u001b[39m.\u001b[39mproduct(fly1[ichr],fly2[ichr])]) \u001b[39mfor\u001b[39;00m ichr \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m3\u001b[39m)]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(possible_chromosomes)\n\u001b[1;32m----> 3\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [(chromosome[\u001b[39m0\u001b[39;49m],chromosome[\u001b[39m0\u001b[39m]) \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(chromosome)\u001b[39m==\u001b[39m\u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mtuple\u001b[39m(chromosome) \u001b[39mfor\u001b[39;00m chromosome \u001b[39min\u001b[39;00m possible_chromosomes]\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(possible_chromosomes)\n\u001b[0;32m      5\u001b[0m possible_chromosomes \u001b[39m=\u001b[39m [[alleles \u001b[39mfor\u001b[39;00m alleles \u001b[39min\u001b[39;00m chromosome_list \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m ((alleles[\u001b[39m0\u001b[39m]\u001b[39m==\u001b[39malleles[\u001b[39m1\u001b[39m]) \u001b[39mand\u001b[39;00m (alleles[\u001b[39m0\u001b[39m] \u001b[39min\u001b[39;00m balancers_table\u001b[39m.\u001b[39mlabel\u001b[39m.\u001b[39mtolist()))] \u001b[39mfor\u001b[39;00m chromosome_list \u001b[39min\u001b[39;00m possible_chromosomes]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+      "[1, 2, 5, 6]\n",
+      "[1, 3, 8, 5]\n",
+      "[1, 2, 3, 5, 6, 8]\n"
      ]
     }
    ],
    "source": [
-    "possible_chromosomes = [set([tuple(set(x)) for x in itertools.product(fly1[ichr],fly2[ichr])]) for ichr in range(3)]\n",
-    "print(possible_chromosomes)\n",
-    "possible_chromosomes = [(chromosome[0],chromosome[0]) if len(chromosome)==1 else tuple(chromosome) for chromosome in possible_chromosomes]\n",
-    "print(possible_chromosomes)\n",
-    "possible_chromosomes = [[alleles for alleles in chromosome_list if not ((alleles[0]==alleles[1]) and (alleles[0] in balancers_table.label.tolist()))] for chromosome_list in possible_chromosomes]\n",
-    "print(possible_chromosomes)\n",
-    "possible_progeny = [z for z in itertools.product(*possible_chromosomes)]\n",
-    "print(possible_progeny)\n",
-    "progeny_genotypes = [chromosomes_to_string(chromosome_list) for chromosome_list in possible_progeny]\n",
-    "    "
+    "A = [1,2,5,6]\n",
+    "B = [1,3,8,5]\n",
+    "C = list(set(A+B))\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'w[*]'}, {'UAS<stop>Kir2.1'}, {'+'}]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     prog_chrms_sets \u001b[39m=\u001b[39m [\u001b[39mset\u001b[39m(x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m split_into_chromosomes(prog)]\n\u001b[0;32m      4\u001b[0m     \u001b[39mprint\u001b[39m(prog_chrms_sets)\n\u001b[1;32m----> 5\u001b[0m     progeny_sets\u001b[39m.\u001b[39;49madd(prog_chrms_sets)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(progeny_sets)\n\u001b[0;32m      7\u001b[0m \u001b[39m# progeny_sets = set(progeny_sets)\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m# progeny_sets\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "progeny_sets = set()\n",
-    "for prog in progeny_genotypes:\n",
-    "    prog_chrms_sets = [set(x) for x in str_to_chromosomes(prog)]\n",
-    "    print(prog_chrms_sets)\n",
-    "    progeny_sets.add(prog_chrms_sets)\n",
-    "print(progeny_sets)\n",
-    "# progeny_sets = set(progeny_sets)\n",
-    "# progeny_sets\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'+', 'CyO', 'UAS<stop>Kir2.1', 'w[*]'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set([x for chr in fly1_chromosomes for x in chr])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Tm2', 'Tm6b', 'CyO', 's']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "balancers_table.label.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for fly1, fly2 in itertools.product(fly_stock_table.genotype,fly_stock_table.genotype):\n",
-    "    progeny_genotypes = get_progeny(fly1=str_to_chromosomes(fly1),fly2=str_to_chromosomes(fly2),balancers_table=balancers_table)\n",
+    "def cross_one_step(stock_pool, balancers_table):\n",
+    "    all_progeny = []\n",
+    "    for fly1, fly2 in itertools.combinations_with_replacement(stock_pool,2):\n",
+    "        progeny_genotypes = get_progeny(fly1=fly1,fly2=fly2,balancers_table=balancers_table)\n",
+    "        all_progeny.extend(progeny_genotypes)\n",
     "\n",
-    "    \n",
+    "    return list(set(all_progeny))\n",
     "\n",
+    "original_stock_pool = fly_stock_table.genotype.tolist()\n",
+    "goal_genotype = 'w[*] ; UAS<stop>Kir2.1 ; '\n",
+    "goal_genotype = fix_genotype_notation(goal_genotype)\n",
     "\n",
-    "    if goal_genotype not in progeny_genotypes:\n",
-    "        second_step_stock = [fly1, fly2] + progeny_genotypes\n",
-    "        # for fly3, fly4 in itertools.product(second_step_stock,second_step_stock):\n",
-    "        #     second_progeny_genotypes = get_progeny(fly1=str_to_chromosomes(fly3),fly2=str_to_chromosomes(fly4),balancers_table=balancers_table)\n",
-    "    #         if goal_genotype in second_progeny_genotypes:\n",
-    "    #             print('viable cross plan')\n",
-    "    #             print(fly1,' x ', fly2)\n",
-    "    #             print(fly3,' x ', fly4)\n",
-    "    # else:\n",
-    "    #     print('viable cross plan')\n",
-    "    #     print(fly1,' x ', fly2)\n"
+    "n_steps = 0\n",
+    "current_stock_pool = original_stock_pool.copy()\n",
+    "while (goal_genotype not in current_stock_pool) or (n_steps > 4):\n",
+    "    n_steps += 1\n",
+    "    new_stock_pool = cross_one_step(current_stock_pool, balancers_table)\n",
+    "    current_stock_pool = list(set(current_stock_pool + new_stock_pool))\n",
+    "\n",
+    "    if goal_genotype in current_stock_pool:\n",
+    "        print(n_steps)\n"
    ]
   },
   {
