--- a/testing.ipynb
+++ b/testing.ipynb
@@ -61,7 +61,15 @@
     "    progeny_chromosome_pool = clean_lethals_from_pool(progeny_chromosome_pool, balancers_table)\n",
     "    possible_progeny = [z for z in itertools.product(*progeny_chromosome_pool)]\n",
     "    progeny_genotypes = [chromosomes_to_string(chromosome_list) for chromosome_list in possible_progeny]\n",
-    "    return progeny_genotypes"
+    "    return progeny_genotypes\n",
+    "\n",
+    "def cross_one_step(stock_pool, balancers_table):\n",
+    "    all_progeny = []\n",
+    "    for fly1, fly2 in itertools.combinations_with_replacement(stock_pool,2):\n",
+    "        progeny_genotypes = get_progeny(fly1=fly1,fly2=fly2,balancers_table=balancers_table)\n",
+    "        all_progeny.extend(progeny_genotypes)\n",
+    "\n",
+    "    return list(set(all_progeny))"
    ]
   },
   {
@@ -220,30 +228,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 5, 6]\n",
-      "[1, 3, 8, 5]\n",
-      "[1, 2, 3, 5, 6, 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = [1,2,5,6]\n",
-    "B = [1,3,8,5]\n",
-    "C = list(set(A+B))\n",
-    "print(A)\n",
-    "print(B)\n",
-    "print(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -256,14 +240,6 @@
     }
    ],
    "source": [
-    "def cross_one_step(stock_pool, balancers_table):\n",
-    "    all_progeny = []\n",
-    "    for fly1, fly2 in itertools.combinations_with_replacement(stock_pool,2):\n",
-    "        progeny_genotypes = get_progeny(fly1=fly1,fly2=fly2,balancers_table=balancers_table)\n",
-    "        all_progeny.extend(progeny_genotypes)\n",
-    "\n",
-    "    return list(set(all_progeny))\n",
-    "\n",
     "original_stock_pool = fly_stock_table.genotype.tolist()\n",
     "goal_genotype = 'w[*] ; UAS<stop>Kir2.1 ; '\n",
     "goal_genotype = fix_genotype_notation(goal_genotype)\n",
@@ -278,13 +254,6 @@
     "    if goal_genotype in current_stock_pool:\n",
     "        print(n_steps)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
